--- a/01_Canvas/02_Drawing/page.html
+++ b/01_Canvas/02_Drawing/page.html
@@ -5,12 +5,20 @@
     </head>
 
     <body>
+        <h1>Line</h1>
+        <canvas id="1003" width="200" height="100"
+        style="border: 1px solid red" onclick="drawLine()"></canvas>
+
         <h1>Rectangle</h1>
         <canvas id="1001" width="200" height="100"
         style="border: 1px solid red" onclick="drawRect()"></canvas>
 
         <h1>Circle</h1>
         <canvas id="1002" width="200" height="100"
-        style="border: 1px solid red"></canvas>
+        style="border: 1px solid red" onclick="drawCircle()"></canvas>
+
+        <h1>Text</h1>
+        <canvas id="1004" width="200" height="100"
+        style="border: 1px solid red" onclick="drawText()"></canvas>        
     </body>
 </html>
