JS Object (ctn.)

--- a/02_Object/01_Object-Definition/index.html
+++ b/02_Object/01_Object-Definition/index.html
@@ -5,10 +5,16 @@
             Object Definition
         </title>
 
-        <script src="index.js"></script>
+        <link rel="stylesheet" type="text/css" href="index.css">
+        <script src="index.js"></script>        
     </head>
 
     <body>
-        
+        <ul>
+            <li><a href="javascript:Login()">Login</a></li>
+            <li><a href="javascript:Contact()">Contact</a></li>
+        </ul>
+
+        <div id="root"></div>
     </body>
 </html>
