--- a/02_Object/01_Object-Definition/index.html
+++ b/02_Object/01_Object-Definition/index.html
@@ -13,6 +13,7 @@
         <ul>
             <li><a href="javascript:Login()">Login</a></li>
             <li><a href="javascript:Contact()">Contact</a></li>
+            <li><a href="javascript:About()">About</a></li>
         </ul>
 
         <div id="root"></div>
