JS Object property

--- a/02_Object/02_Object-Property/index.html
+++ b/02_Object/02_Object-Property/index.html
@@ -9,6 +9,16 @@
     </head>
 
     <body>
-        
+        <label style="display: inline-block; width: 100px">Name:</label>
+        <input id="name" type="text" placeholder="Nguyen Hoai Phuong">
+
+        <br>
+
+        <label style="display: inline-block; width: 100px">Age:</label>
+        <input id="age" type="text" placeholder="34">
+
+        <br>
+
+        <input type="submit" value="Submit" onclick="notify()">
     </body>
 </html>
