JS Object property

--- a/02_Object/02_Object-Property/index.html
+++ b/02_Object/02_Object-Property/index.html
@@ -19,6 +19,11 @@
 
         <br>
 
+        <label style="display: inline-block; width: 100px">City:</label>
+        <input id="city" type="text" placeholder="Quy Nhon">
+
+        <br>
+
         <input type="submit" value="Submit" onclick="notify()">
     </body>
 </html>
