--- a/00_Basic/12_Callback/Example_3/index.html
+++ b/00_Basic/12_Callback/Example_3/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Sync Callback</title>
+        <title>AsyncCallback</title>
     </head>
     <body>
         <script src="index.js"></script>
